--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Corona Virus Tracker" />
-  <title>Corona Virus Tracker</title>
+  <meta name="description" content="COVID19 TRACKER APP" />
+  <title>COVID19 TRACKER APP</title>
 </head>
 
 <body>
